added survey content / questions consistent with a general theme, included background img through css

--- a/css/style.css
+++ b/css/style.css
@@ -18,31 +18,42 @@
 
 body {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/pexels-rpg.jpg");
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: no-repeat; }
 
 main {
-  width: 100%;
-  background-color: #222921;
   padding: 5vh 0; }
   @media only screen and (max-width: 400px) {
     main {
       padding: 2vh 0; } }
 
 header {
-  padding: 1rem; }
+  padding: 1rem;
+  background-color: #242424; }
+  header h1 {
+    color: white; }
+  header p {
+    color: #adadad; }
 
 #survey-form {
   transition: ease-in 0.3s;
+  background-color: #1f1f1f;
+  padding: 1%;
+  border-radius: 5px;
   width: 40%; }
   @media only screen and (max-width: 800px) {
     #survey-form {
       width: 80%; } }
   @media only screen and (max-width: 400px) {
     #survey-form {
-      width: 92%; } }
+      width: 99%; } }
 
 .input-wrapper {
   padding: 1rem;
+  background-color: whitesmoke;
   border-radius: 5px;
   margin: 1rem;
   width: 100%;
@@ -60,32 +71,12 @@ header {
 .input-title, #name-label, #number-label, #email-label {
   color: black; }
 
-#name-wrapper {
-  background-color: whitesmoke; }
-
-#email-wrapper {
-  background-color: whitesmoke; }
-
-#number-wrapper {
-  background-color: whitesmoke; }
-
-#dropdown-wrapper {
-  background-color: whitesmoke; }
-
-#radio-wrapper {
-  background-color: whitesmoke; }
-
-#checkbox-wrapper {
-  background-color: whitesmoke; }
-
-#textarea-wrapper {
-  background-color: whitesmoke; }
-  #textarea-wrapper textarea {
-    width: 100%;
-    resize: none;
-    border-radius: 5px;
-    border: solid 1px black;
-    padding: 0.5rem; }
+#textarea-wrapper textarea {
+  width: 100%;
+  resize: none;
+  border-radius: 5px;
+  border: solid 1px black;
+  padding: 0.5rem; }
 
 #submit-wrapper {
   background-color: transparent;
@@ -96,12 +87,13 @@ header {
     width: 100%;
     padding: 1rem;
     border-radius: 5px;
+    border: none;
     font-size: 1.2rem;
     color: black; }
     #submit-wrapper input:hover {
-      background-color: #313b30;
+      background-color: #7a9e75;
       cursor: pointer;
-      color: #fafafa; }
+      box-shadow: 0px 0px 5px 1px black; }
 
 input:invalid {
   box-shadow: none; }
