--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,10 +20,19 @@
 body{
     padding:0;
     margin:0;
+    background: 
+    linear-gradient(
+          rgba(0, 0, 0, 0.7), 
+          rgba(0, 0, 0, 0.7)
+        ),
+    url("../img/pexels-rpg.jpg");
+    background-size:cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
 }
 main{
-    width:100%;
-    background-color: rgb(34, 41, 33);
+    // width:100%;
+   
     padding:5vh 0;
     @media only screen and (max-width:400px){
         padding:2vh 0;
@@ -31,22 +40,32 @@ main{
 }
 header{
     padding: 1rem;
+    background-color: rgb(36, 36, 36);
+    h1{
+        color: rgb(255, 255, 255);
+    }
+    p{
+        color:rgb(173, 173, 173);
+    }
 }
 #survey-form{
     transition: ease-in 0.3s;
-
+    background-color: rgb(31, 31, 31);
+    padding: 1%;
+    border-radius:5px;
     width: 40%;
     @media only screen and (max-width:800px){
         width:80%;
     }
     @media only screen and (max-width:400px){
-        width:92%;
+        width:99%;
     }
 
 }
 .input-wrapper{
     // border:solid 1px rgb(0, 0, 0);
     padding:1rem;
+    background-color: whitesmoke;
 
     border-radius:5px;
     margin: 1rem;
@@ -65,31 +84,7 @@ header{
 .input-title,#name-label,#number-label,#email-label{
     color:rgb(0, 0, 0);
 }
-#name-wrapper{
-    background-color: whitesmoke;
-}
-#email-wrapper{
-    background-color: whitesmoke;
-
-}
-#number-wrapper{
-    background-color: whitesmoke;
-
-}
-#dropdown-wrapper{
-    background-color: whitesmoke;
-
-}
-#radio-wrapper{
-    background-color: whitesmoke;
-
-}
-#checkbox-wrapper{
-    background-color: whitesmoke;
-
-}
 #textarea-wrapper{
-    background-color: whitesmoke;
     textarea{
         width:100%;
         resize: none;
@@ -109,12 +104,17 @@ header{
         border-radius:5px;
         // border: solid 1px black;
         // font-weight: bold;
+        border: none;
         font-size:1.2rem;
         color: rgb(0, 0, 0);
+        // transition: ease 0.1s;
         &:hover{
-            background-color:rgb(49, 59, 48);
+            background-color:rgb(122, 158, 117);
             cursor:pointer;
-            color: rgb(250, 250, 250);
+            // color: rgb(250, 250, 250);
+            box-shadow: 0px 0px 5px 1px rgb(0, 0, 0);
+            // border: solid 1px black;
+            
         }
     }
 }
